{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 3,
  "lineage": "8c5f02fc-abb3-25ea-4106-120d2734e6ea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b614a5d911900a9b",
            "arn": "arn:aws:ec2:us-east-2:256692725258:instance/i-0c8e0059b1207fe36",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8e0059b1207fe36",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wordpress",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02b63ab17f7688557",
            "private_dns": "ip-172-31-45-106.us-east-2.compute.internal",
            "private_ip": "172.31.45.106",
            "public_dns": "ec2-3-144-231-8.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.231.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-030bb6092e4af9821",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "remote",
              "webserver"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff172442aaab9f8a",
            "tags": {
              "Name": "zomato-application",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato-application",
              "project": "zomato"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c430bcda8a1406e",
              "sg-05fe5144f1781093f"
            ]
          },
          "dependencies": [
            "aws_security_group.remote",
            "aws_security_group.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remote",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256692725258:security-group/sg-05fe5144f1781093f",
            "description": "allow 22 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fe5144f1781093f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "remote",
            "name_prefix": "",
            "owner_id": "256692725258",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "remote",
              "project": "uber"
            },
            "tags_all": {
              "Name": "remote",
              "project": "uber"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fac04056aace973d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256692725258:security-group/sg-01c430bcda8a1406e",
            "description": "allows 80,443 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c430bcda8a1406e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver",
            "name_prefix": "",
            "owner_id": "256692725258",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-zomato",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "webserver-zomato",
              "project": "zomato"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fac04056aace973d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}